--- a/GUI/MainWindow_GUI.ui
+++ b/GUI/MainWindow_GUI.ui
@@ -77,20 +77,10 @@
      <string>界面热导率：</string>
     </property>
    </widget>
-   <widget class="QTextEdit" name="exp_res_lineEdit_2">
-    <property name="geometry">
-     <rect>
-      <x>1160</x>
-      <y>820</y>
-      <width>221</width>
-      <height>51</height>
-     </rect>
-    </property>
-   </widget>
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>1390</x>
+      <x>1240</x>
       <y>830</y>
       <width>111</width>
       <height>31</height>
@@ -142,6 +132,16 @@
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_5"/>
+   </widget>
+   <widget class="QLineEdit" name="exp_res_lineEdit_2">
+    <property name="geometry">
+     <rect>
+      <x>1160</x>
+      <y>830</y>
+      <width>71</width>
+      <height>31</height>
+     </rect>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
