modified:   GUI/ChildWindow_1.py 	modified:   GUI/ChildWindow_1.ui 	modified:   GUI/ChildWindow_2.py 	modified:   GUI/ChildWindow_2.ui 	modified:   GUI/MainWindow_GUI.ui 	modified:   GUI/main_window_2.py 	deleted:    data/Cu.eam.alloy 	new file:   data/lattice.dump 	modified:   final_tdiff.txt 	modified:   log.lammps 	modified:   melolular_dynamics/in/in.lattice 	modified:   melolular_dynamics/in/in.lattice_2 	modified:   output/render_3d.py 	modified:   result_heat_1.txt 	modified:   result_pdos.txt

--- a/GUI/ChildWindow_2.ui
+++ b/GUI/ChildWindow_2.ui
@@ -322,6 +322,9 @@ color: rgb(0, 0, 0);</string>
    <property name="text">
     <string>完成</string>
    </property>
+   <property name="shortcut">
+    <string>Return</string>
+   </property>
   </widget>
   <widget class="QLabel" name="label_12">
    <property name="geometry">
