modified:   GUI/MainWindow_GUI.py 	modified:   GUI/MainWindow_GUI.ui 	modified:   GUI/main_window_2.py 	modified:   data/lattice.dump 	modified:   data/lattice.lmp 	modified:   data/lattice_1.lmp 	modified:   data/lattice_2.lmp 	modified:   data/lattice_final.lmp 	deleted:    "data/\344\275\223\347\263\273\345\214\272\345\237\237\346\270\251\345\272\246_\345\215\225\345\205\203\347\264\240.png" 	deleted:    "data/\344\275\223\347\263\273\345\214\272\345\237\237\346\270\251\345\272\246_\345\215\225\345\205\203\347\264\240.txt" 	deleted:    "data/\344\275\223\347\263\273\346\270\251\345\272\246\346\233\262\347\272\277_\345\215\225\345\205\203\347\264\240.png" 	deleted:    "data/\344\275\223\347\263\273\346\270\251\345\272\246\346\233\262\347\272\277_\345\215\225\345\205\203\347\264\240.txt" 	deleted:    "data/\346\231\266\344\275\223\345\216\237\345\255\2203D\346\270\262\346\237\223\345\233\276_\344\276\235\346\270\251\345\272\246\347\235\200\350\211\262.png" 	deleted:    "data/\346\231\266\344\275\223\345\216\237\345\255\2203D\346\270\262\346\237\223\345\233\276_\347\252\201\345\207\272\346\230\276\347\244\272\347\251\272\344\275\215.png" 	deleted:    "data/\346\231\266\344\275\223\345\216\237\345\255\2203D\346\270\262\346\237\223\345\233\276_\347\252\201\345\207\272\346\230\276\347\244\272\351\227\264\351\232\231.png" 	modified:   final_tdiff.txt 	modified:   log.lammps 	modified:   main.py 	modified:   output/plot_2d.py 	modified:   result_heat_1.txt 	modified:   result_iterate.txt 	modified:   result_pdos.txt

--- a/GUI/MainWindow_GUI.ui
+++ b/GUI/MainWindow_GUI.ui
@@ -52,7 +52,7 @@
      <rect>
       <x>1030</x>
       <y>540</y>
-      <width>521</width>
+      <width>471</width>
       <height>271</height>
      </rect>
     </property>
@@ -96,19 +96,6 @@
      <string>W*K-1*m-1</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_2">
-    <property name="geometry">
-     <rect>
-      <x>810</x>
-      <y>877</y>
-      <width>681</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>PushButton</string>
-    </property>
-   </widget>
    <widget class="QPushButton" name="pushButton_3">
     <property name="geometry">
      <rect>
@@ -119,7 +106,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>切换</string>
+     <string>无高亮显示</string>
     </property>
    </widget>
    <widget class="QWidget" name="verticalLayoutWidget_5">
@@ -147,6 +134,16 @@
       <family>宋体</family>
       <pointsize>12</pointsize>
      </font>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="comboBox">
+    <property name="geometry">
+     <rect>
+      <x>810</x>
+      <y>877</y>
+      <width>681</width>
+      <height>41</height>
+     </rect>
     </property>
    </widget>
   </widget>
